2012-08-20  Dirk Eddelbuettel  <edd@dexter>

	* src/RcppBDTtz.cpp: New modules 'bdtTz' for time zone functionality
	* R/zzz.R: Load bdtTzMod module on startup
	* inst/include/RcppBDT.h: Also include local_time.hpp header

	* inst/data/date_time_zonespec.csv: Time zone data from Boost sources

2012-08-08  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION: Version 0.2.1

	* R/bdt.R (getEndOfBizWeek,getEndOfMonth): Add call to fromDate() to
  	pass the argument to the bdt instance

2012-07-02  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION: Version 0.2.0

	* inst/NEWS.Rd, inst/NEWS: Added

2012-06-30  Dirk Eddelbuettel  <edd@debian.org>

	* R/zzz.R: Updated for R 2.15.1 using loadModule() and evalqOnLoad()

	* src/RcppBDT.cpp (RCPP_MODULE): Expose the module class as 'bdtDate'
	* R/zzz.R: Updated accordingly
	* man/bdt.Rd: Updated accordingly

	* man/bdt.Rd: Added two required alias'es flagged by R CMD check

2012-04-11  Dirk Eddelbuettel  <edd@debian.org>

	* inst/include/RcppBDT.h, src/RcppBDT.cpp: prefix local #define
	variable with RcppBDT_ to avoid any possible clashes

	* inst/include/RcppBDT.h, src/RcppBDT.cpp: remove exception
	specifications in partial specializations for as and wrap

2012-03-30  Romain Francois  <romain@r-enthusiasts.com>

	* R/zzz.R, RcppBDT.cpp, NAMESPACE, DESCRIPTION: update module
	initialization

2011-01-17  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version): bumped to 0.1.0 for first CRAN upload

2011-01-13  Dirk Eddelbuettel  <edd@debian.org>

	* R/zzz.R: added print and format methods
	* man/bdt.Rd: documented print and format methods
	* demo/RcppBDT.R: simplied thanks to format method

2011-01-12  Dirk Eddelbuettel  <edd@debian.org>

	* R/zzz.R (.onLoad): import module, construct from class 'date'
	* demo/RcppBDT.R: adjusted accordingly

	* R/constants.R: define date constants here and not in zzz.R

	* cleanup: added simple cleanup script

2011-01-11  Dirk Eddelbuettel  <edd@debian.org>
